--- a/css/styles.css
+++ b/css/styles.css
@@ -1,187 +1,81 @@
-* { 
-    margin: 0;
+*{
     padding: 0;
+    margin: 0;
+}
+.menu {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100px;
+    background-color: rgb(00, 68, 64, 0.1);
 }
 
-header{
-    background-color: rgb(00, 68, 64, 0.1);
-    border-bottom: 1px solid black;
-    text-align: center;
-    align-items: center;
-    vertical-align: middle;
+.menu a img {
+    height: 40px;
 }
-nav ul li{
+.menu li {
+    list-style-type: none;
     display: inline-block;
-    margin: 50px;
-    vertical-align: middle;
-    
 }
-
-.botones{
-    color: #CF142C;
-    font-family: 'Poppins', sans-serif;
+.menu li a {
     text-decoration: none;
-
-}
-.banner{
-    text-align: center;
-}
-
-.texto-principal{
-    color: #006864;
-    font-family: 'Poppins', sans-serif; 
-    margin-left: 10px;
-}
-
-
-footer{
-    background-color: rgb(00, 68, 64, 0.1);
-    border-bottom: 1px solid black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;  
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-footer ul li {
-    list-style: none;
-}
-.info{
-    display: flex;
-    color: #006864;
-    text-align: center;
-    align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-}
-h1{
+    margin: 12px;
     color: #CF142C;
-    font-family: 'Poppins', sans-serif;
-    text-align: center
+    font-family: 'Poppins', sans-serif;   
+    font-size: 1rem;
 }
-h2{
-    color: #CF142C;
-    font-family: 'Poppins', sans-serif;
-
-}
-section h2{
-    color: white;
-    background-color: #006864;
-    display: table-row
-
-
-}
-.texto-institucional{
-        
-    text-align: center;
-}
-
-.fondo-quienes-somos{
-    background-image: url(../assets/img/fondo-1440-1501.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.fotos{
-    display: flex;
-    flex-direction: column;
-    max-width: 611px;
-}
-.historia{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px;
-}
-.productos{
-    background-color: #006817;
-    background-size: auto;
-}
-form{
-    margin-top: 10px;
-}
-label{
-    display: flex;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #006864;
-    font-family: 'Poppins', sans-serif;
-}
-input,textarea{
-    display: block;
+/* Banner */
+.foto-banner{
     width: 100%;
-    padding: 10px;
-    border: 2px solid #006864 ;
-    border-radius: 5px;
-    font-size: 16px;
-    margin-bottom: 10px;
-    font-family: 'Poppins', sans-serif;
-    
-}
-.boton-formulario{
-    background-color: #006864;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.redes{
-    text-align: center;
+    height: 100%;
 }
 
-.container{
-    width: 100%;
-    display: flex;
-    max-width: 1100px;
-    margin: auto;
+/* Sobre nosotros */
 
+.info-empresa div{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
 }
 .card{
-    width: 100%;
-    margin: 20px;
-    border-radius: 6px;
-    overflow: hidden;
-    box-shadow: 0px 1px 10px rgba(0,0, 0, 2);
-    text-align: center ;
-    cursor: default;
-    transition: all 400ms ease;
-    line-height: 1.5;
-}
-.card:hover{
-    box-shadow: 5px 5px 200px rgba(0,0, 0, 4);
-    transform: translateY(-3%);
-}
-.card.contenido{
-    padding-top: 15px;
+    display: flex ;
+    align-items: center;
     text-align: center;
+    margin: 1% 5%;
+}
+.card img{
+    max-width: 50%;
+}
+.card p{
+    color: #006864;
+    font-family: 'Poppins', sans-serif; 
+    padding-left: 2%;
+    font-size: 1rem;
 }
 
-.card .contenido p{
-    line-height: 1.5;
-    font-family: 'Poppins';
-    color: dimgray;
-
+/* Footer */
+.footer{
+    background-color: rgb(00, 68, 64, 0.1);
+    padding: 1%;
 }
-.card .contenido a{
+.f-container{
+    display: flex;
+    justify-content: space-between;
+    color: #CF142C;
+    font-family: 'Poppins', sans-serif;
     text-decoration: none;
-    display: inline-block;
-    padding: 10px;
-    margin-top: 10px;
-    color: #006864;
-    border: 1px solid #006864;
-    border-radius: 4px;
-    transition: all 400ms ease;
+    align-items: center;
+
+}
+.clientes-proveedores a{
+    color: #CF142C;
     font-family: 'Poppins', sans-serif;
+    text-decoration: none;
 }
-.novedades{
-    text-align: center;
+.clientes-proveedores ul{
+    list-style-type: none;
 }
-main {
-    padding-left: 10px;
-    padding-right: 10px;
+.redes-sociales img{
+    height: 40px;
+    margin-left: 5px;
 }
-.noticia{
-    color: #006864;
-    font-family: 'Poppins', sans-serif;
-}
+/* ----- */
