--- a/css/styles.css
+++ b/css/styles.css
@@ -78,4 +78,47 @@
     height: 40px;
     margin-left: 5px;
 }
+/* page-quienes-somos */
+/* main */
+
+h1{
+    color: #CF142C;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+}
+
+.main{
+    background-image: url(../assets/img/fondo-1440-1501.jpg);
+    background-size: cover;
+    padding: 2% 5%;
+
+}
+.historia{
+    text-align: center;
+    color: #006864;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+}
+.historia .video{
+    max-width: 100%;
+}
+
+.unidades-de-negocio{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    text-align: center;
+    color: #006864;
+    font-family: 'Poppins', sans-serif;
+    font-size: .8rem;
+    gap: 3%;
+    padding: 2% 0;
+
+}
+.villares img{
+    max-width: 100%;
+}
+.newgarden img{
+    max-width: 100%;
+}
 /* ----- */
