--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
 /* Banner */
 .foto-banner{
     width: 100%;
-    height: 100%;
+    min-height: 150px;
 }
 
 /* Sobre nosotros */
@@ -49,7 +49,7 @@
     color: #006864;
     font-family: 'Poppins', sans-serif; 
     padding-left: 2%;
-    font-size: 1rem;
+    font-size: 85%;
 }
 
 /* Footer */
@@ -125,4 +125,84 @@ h2{
 .newgarden img{
     max-width: 100%;
 }
-/* ----- */
+.villares p{
+    margin: 2%;
+}
+.newgarden p{
+    margin: 2%;
+}
+.vuela2{
+    display: none;
+}
+
+/* index-responsive*/
+
+
+@media (max-width: 864px){
+    .f-container{
+        flex-direction: column;
+        text-align: center;
+        gap: 10px;
+    }
+}
+
+@media (max-width: 750px){
+   .menu{
+    flex-direction: column;
+    text-align: center;
+    height: auto;
+    gap: 5px;
+    
+   }
+   .menu a img {
+    height: 30px;
+}
+.menu li {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+}
+.redes-sociales img{
+    height: 30px;
+    margin-left: 5px;
+}
+.card img{
+    max-width: 100%;
+}
+.card{
+    display: flex ;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 1 5%;
+}
+.info-empresa div{
+    display: flex;
+    flex-direction: column;
+    padding: 3% 0;
+
+}
+}
+
+/* quienes-somos-responsive */
+@media (max-width: 750px){
+    .vuela{
+        display: none;
+    }
+    .vuela2{
+        display: inherit;
+    }
+    .unidades-de-negocio{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        text-align: center;
+        color: #006864;
+        font-family: 'Poppins', sans-serif;
+        font-size: .8rem;
+        gap: 3%;
+        padding: 10% 0;
+    
+    }
+
+}
